--- a/templates/photos/form.html
+++ b/templates/photos/form.html
@@ -1,1 +1,17 @@
-photos
+<div class="page-header">
+	<h1>Crear <small>Foto</small></h1>
+</div>
+<div class="col-md-6">
+<form>
+	<div class="form-group">
+		<label>Titulo</label>
+		<input type="text" class="form-control" placeholder="Titulo" required="required"> 
+	</div>
+	<div class="form-group">
+		<label for="exampleInputFile">Imagen</label>
+		<input type="file" id="exampleInputFile">
+		<p class="help-block">Ingrese una imagen jpg</p>
+	</div>
+  <button type="submit" class="btn btn-default">Guardar</button>
+</form>
+</div>
