--- a/templates/albums/form.html
+++ b/templates/albums/form.html
@@ -1,1 +1,13 @@
-almbums
+<div class="page-header">
+	<h1>Crear <small>Album</small></h1>
+</div>
+<div class="col-md-6">
+	
+<form>
+	<div class="form-group">
+		<label>Titulo</label>
+		<input type="text" class="form-control" placeholder="Titulo" required="required"> 
+	</div>
+  <button type="submit" class="btn btn-default">Guardar</button>
+</form>
+</div>
