--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -1,1 +1,20 @@
-comments
+<div class="page-header">
+	<h1>Crear <small>Comentario</small></h1>
+</div>
+<div class="col-md-6">
+<form>
+	<div class="form-group">
+		<label>Nombre completo</label>
+		<input type="text" class="form-control" placeholder="Nombre" required="required"> 
+	</div>
+	<div class="form-group">
+		<label>Correo electronico</label>
+		<input type="email" class="form-control" placeholder="Email" required="required">
+	</div>
+	<div class="form-group">
+		<label>Nombre de usuario</label>
+		<textarea class="form-control" rows="3" placeholder="Cuerpo" required="required"></textarea>
+	</div>
+  <button type="submit" class="btn btn-default">Guardar</button>
+</form>
+</div>
