--- a/templates/post/form.html
+++ b/templates/post/form.html
@@ -1,1 +1,17 @@
-post
+<div class="page-header">
+	<h1>Crear <small>Post</small></h1>
+</div>
+<div class="col-md-6">
+	
+<form>
+	<div class="form-group">
+		<label>Titulo</label>
+		<input type="text" class="form-control" placeholder="Nombre" required="required"> 
+	</div>
+	<div class="form-group">
+		<label>Comentario</label>
+		<textarea class="form-control" rows="3" placeholder="Comentario" required="required"></textarea>
+	</div>
+  <button type="submit" class="btn btn-default">Guardar</button>
+</form>
+</div>
