--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -1,1 +1,18 @@
-post
+<div class="page-header">
+	<h1>Administrar <small>Post</small></h1>
+</div>
+<input type="text" class="form-control" placeholder="Type here to search" ng-model="searchText">
+<table class="table table-hover table-condensed">
+	<thead>
+		<tr>
+			<th>Titulo</th>
+			<th>Contenido</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="model in models | filter:searchText">
+			<td>{{model.title}}</td>
+			<td>{{model.body}}</td>
+		</tr>
+	</tbody>
+</table>
