--- a/templates/user/form.html
+++ b/templates/user/form.html
@@ -16,16 +16,6 @@
 		<label>Correo electronico</label>
 		<input type="email" class="form-control" placeholder="Email" required="required">
 	</div>
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" id="exampleInputFile">
-    <p class="helasdasdasdsp-block">Example block-level help text here.</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
