--- a/templates/albums/form.html
+++ b/templates/albums/form.html
@@ -8,6 +8,16 @@
 		<label>Titulo</label>
 		<input type="text" class="form-control" placeholder="Titulo" required="required"> 
 	</div>
+	<div class="form-group">
+		<label>Usuario</label>
+		<select class="form-control" required="required">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+		</select>
+	</div>
   <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
