--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -15,6 +15,16 @@
 		<label>Nombre de usuario</label>
 		<textarea class="form-control" rows="3" placeholder="Cuerpo" required="required"></textarea>
 	</div>
+	<div class="form-group">
+		<label>Post</label>
+		<select class="form-control" required="required">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+		</select>
+	</div>
   <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
