--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -1,1 +1,24 @@
-comments
+<div class="page-header">
+	<h1>Administrar <small>Comments</small></h1>
+</div>
+<input type="text" class="form-control" placeholder="Type here to search" ng-model="searchText">
+<table class="table table-hover table-condensed">
+	<thead>
+		<tr>
+			<th>#</th>
+			<th>Titulo</th>
+			<th>Correo</th>
+			<th>Contenido</th>
+			<th>Post</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="comment in comments | filter:searchText">
+			<td>{{comment.id}}</td>
+			<td>{{comment.name}}</td>
+			<td>{{comment.email}}</td>
+			<td>{{comment.body}}</td>
+			<td>{{comment.title}}</td>
+		</tr>
+	</tbody>
+</table>
