--- a/templates/photos/form.html
+++ b/templates/photos/form.html
@@ -12,6 +12,16 @@
 		<input type="file" id="exampleInputFile">
 		<p class="help-block">Ingrese una imagen jpg</p>
 	</div>
+	<div class="form-group">
+		<label>Album</label>
+		<select class="form-control" required="required">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+		</select>
+	</div>
   <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
