--- a/templates/photos/list.html
+++ b/templates/photos/list.html
@@ -1,5 +1,10 @@
+<div class="page-header">
+	<h1>Administrar <small>Imagenes</small></h1>
+</div>
 <input type="text" class="form-control" placeholder="Type here to search" ng-model="searchText">
-<div class="col-md-3" ng-repeat="model in models | filter:searchText | limitTo:16">
+<div class="col-md-3" ng-repeat="model in photos | filter:searchText | limitTo:16">
+
+	<h5 class="lead" ng-bind="model.id+'# Album '+model.title"></h5>
 	<p class="lead" ng-bind="model.title | limitTo:12"></p>
 	<img src="{{model.thumbnailUrl}}" alt="{{model.title}}" class="img-rounded">
 </div>
