--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -5,11 +5,12 @@
 <table class="table table-hover table-condensed">
 	<thead>
 		<tr>
-			<th>Nombre</th><th>Usuario</th><th>email</th><th>Opciones</th>
+			<th>#</th><th>Nombre</th><th>Usuario</th><th>email</th><th>Opciones</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr ng-repeat="user in users | filter:searchText">
+			<td>{{user.id}}</td>
 			<td>{{user.name}}</td>
 			<td>{{user.username}}</td>
 			<td>{{user.email}}</td>
