--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -5,14 +5,18 @@
 <table class="table table-hover table-condensed">
 	<thead>
 		<tr>
+			<th>#</th>
 			<th>Titulo</th>
 			<th>Contenido</th>
+			<th>Usuario</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="model in models | filter:searchText">
-			<td>{{model.title}}</td>
-			<td>{{model.body}}</td>
+		<tr ng-repeat="post in posts | filter:searchText">
+			<td>{{post.id}}</td>
+			<td>{{post.title}}</td>
+			<td>{{post.body}}</td>
+			<td>{{post.username}}</td>
 		</tr>
 	</tbody>
 </table>
