--- a/templates/albums/form.html
+++ b/templates/albums/form.html
@@ -2,22 +2,18 @@
 	<h1>Crear <small>Album</small></h1>
 </div>
 <div class="col-md-6">
-	
-<form>
+<form name="createAlbumForm">
 	<div class="form-group">
 		<label>Titulo</label>
-		<input type="text" class="form-control" placeholder="Titulo" required="required"> 
+		<input ng-model="album.title" type="text" class="form-control" placeholder="Titulo" required="required"> 
 	</div>
 	<div class="form-group">
 		<label>Usuario</label>
-		<select class="form-control" required="required">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
+		<select ng-model="album.userId"  class="form-control" required="required">
+			<option value="">Seleccione ...</option>
+			<option ng-repeat="user in users" value="{{user.id}}">{{user.name}}</option>
 		</select>
 	</div>
-  <button type="submit" class="btn btn-default">Guardar</button>
+  <button ng-click="saveAlbum()" ng-disabled="createAlbumForm.$invalid" type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
