--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -2,29 +2,26 @@
 	<h1>Crear <small>Comentario</small></h1>
 </div>
 <div class="col-md-6">
-<form>
+<form name="create">
 	<div class="form-group">
 		<label>Nombre completo</label>
-		<input type="text" class="form-control" placeholder="Nombre" required="required"> 
+		<input ng-model="comment.title" type="text" class="form-control" placeholder="Nombre" required="required"> 
 	</div>
 	<div class="form-group">
 		<label>Correo electronico</label>
-		<input type="email" class="form-control" placeholder="Email" required="required">
+		<input ng-model="comment.email" type="email" class="form-control" placeholder="Email" required="required">
 	</div>
 	<div class="form-group">
 		<label>Nombre de usuario</label>
-		<textarea class="form-control" rows="3" placeholder="Cuerpo" required="required"></textarea>
+		<textarea ng-model="comment.body" class="form-control" rows="3" placeholder="Cuerpo" required="required"></textarea>
 	</div>
 	<div class="form-group">
 		<label>Post</label>
-		<select class="form-control" required="required">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
+		<select ng-model="comment.postId"  class="form-control" required="required">
+			<option value="">Seleccione ...</option>
+			<option ng-repeat="model in posts" value="{{model.id}}">{{model.id+'# '+model.title}}</option>
 		</select>
 	</div>
-  <button type="submit" class="btn btn-default">Guardar</button>
+  	<button ng-click="save()" ng-disabled="create.$invalid"  type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
