--- a/templates/user/form.html
+++ b/templates/user/form.html
@@ -2,20 +2,19 @@
 	<h1>Crear <small>Usuario</small></h1>
 </div>
 <div class="col-md-6">
-	
-<form>
+<form name="newUserForm">
 	<div class="form-group">
 		<label>Nombre completo</label>
-		<input type="text" class="form-control" placeholder="Nombre" required="required"> 
+		<input ng-model="user.name" type="text" class="form-control" placeholder="Nombre" required="required"> 
 	</div>
 	<div class="form-group">
 		<label>Nombre de usuario</label>
-		<input type="text" class="form-control" placeholder="Nombre de usuario" required="required">
+		<input ng-model="user.username" type="text" class="form-control" placeholder="Nombre de usuario" required="required">
 	</div>
 	<div class="form-group">
 		<label>Correo electronico</label>
-		<input type="email" class="form-control" placeholder="Email" required="required">
+		<input ng-model="user.email" type="email" class="form-control" placeholder="Email" required="required">
 	</div>	
-  <button type="submit" class="btn btn-default">Guardar</button>
+  <button ng-disabled="newUserForm.$invalid" ng-click="save()" type="submit" class="btn btn-default">Guardar</button>
 </form>
 </div>
