--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -14,6 +14,12 @@
 			<td>{{user.name}}</td>
 			<td>{{user.username}}</td>
 			<td>{{user.email}}</td>
+			<td>
+			<div class="btn-group btn-group-xs" role="group " aria-label="...">
+				<button ng-click="getPosts(user.id)" type="button" class="btn btn-default">Posts</button>
+				<button ng-click="getAlbums(user.id)" type="button" class="btn btn-default">Albums</button>
+			</div>
+			</td>
 		</tr>
 	</tbody>
 </table>
